--- a/app/css/main.css
+++ b/app/css/main.css
@@ -65,6 +65,10 @@
             justify-content: space-between;
     font-size: 13px;
     padding: 60px 0; }
+    .wrapper .text-container .num p {
+      color: #e9e9ea;
+      font-size: 90px;
+      margin: 0; }
     .wrapper .text-container .power {
       width: 23%; }
       .wrapper .text-container .power h3 {
@@ -75,6 +79,9 @@
       .wrapper .text-container .power a::after {
         content: url("../img/shape_blue.png");
         margin-left: 10px; }
+      .wrapper .text-container .power img {
+        margin-top: 10px;
+        display: block; }
     .wrapper .text-container .techno {
       width: 23%; }
       .wrapper .text-container .techno h3 {
@@ -85,6 +92,9 @@
       .wrapper .text-container .techno a::after {
         content: url("../img/shape_blue.png");
         margin-left: 10px; }
+      .wrapper .text-container .techno img {
+        margin-top: 10px;
+        display: block; }
     .wrapper .text-container .support {
       width: 23%; }
       .wrapper .text-container .support h3 {
@@ -95,6 +105,9 @@
       .wrapper .text-container .support a::after {
         content: url("../img/shape_blue.png");
         margin-left: 10px; }
+      .wrapper .text-container .support img {
+        margin-top: 10px;
+        display: block; }
 
 .container {
   background: #2a2d32;
@@ -104,7 +117,10 @@
     padding-bottom: 30px; }
   .container .our_services {
     width: 1160px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    /*img:hover {
+      background: rgba(0, 170, 238, 0.9);
+    }*/ }
     .container .our_services .all_services {
       display: -webkit-box;
       display: -webkit-flex;
@@ -119,6 +135,136 @@
       padding-top: 30px; }
     .container .our_services a:hover {
       color: #f4b60d; }
+
+.news {
+  background: #f7f7f7; }
+  .news .all_news {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 1160px;
+    margin: 0 auto; }
+    .news .all_news .latest_news {
+      padding: 40px 0 100px 0; }
+      .news .all_news .latest_news .head_box {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex; }
+        .news .all_news .latest_news .head_box::before {
+          content: url("../img/jan.png");
+          margin-right: 20px;
+          margin-top: 15px; }
+        .news .all_news .latest_news .head_box .advanced_machinery {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          color: #8a8a8a;
+          width: 35%; }
+          .news .all_news .latest_news .head_box .advanced_machinery h4 {
+            color: #000;
+            margin-bottom: 0; }
+          .news .all_news .latest_news .head_box .advanced_machinery .under_text {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex; }
+            .news .all_news .latest_news .head_box .advanced_machinery .under_text span {
+              display: block;
+              margin-right: 5px; }
+            .news .all_news .latest_news .head_box .advanced_machinery .under_text p {
+              color: #0187f4;
+              margin: 0 10px 0 0; }
+      .news .all_news .latest_news .foot_box {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex; }
+        .news .all_news .latest_news .foot_box::before {
+          content: url("../img/jan21.png");
+          margin-right: 20px;
+          margin-top: 15px; }
+        .news .all_news .latest_news .foot_box .powerful {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          color: #8a8a8a;
+          width: 35%; }
+          .news .all_news .latest_news .foot_box .powerful h4 {
+            color: #000;
+            margin-bottom: 0; }
+          .news .all_news .latest_news .foot_box .powerful .under_text {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex; }
+            .news .all_news .latest_news .foot_box .powerful .under_text span {
+              display: block;
+              margin-right: 5px; }
+            .news .all_news .latest_news .foot_box .powerful .under_text p {
+              color: #0187f4;
+              margin: 0 10px 0 0; }
+    .news .all_news .accordion {
+      width: 40%; }
+      .news .all_news .accordion .transition, .news .all_news .accordion p, .news .all_news .accordion ul li i:before, .news .all_news .accordion ul li i:after {
+        -webkit-transition: all 0.25s ease-in-out;
+        transition: all 0.25s ease-in-out; }
+      .news .all_news .accordion h5 {
+        color: #ff6873; }
+      .news .all_news .accordion p {
+        color: rgba(48, 69, 92, 0.8);
+        font-size: 17px;
+        line-height: 26px;
+        letter-spacing: 1px;
+        position: relative;
+        overflow: hidden;
+        max-height: 800px;
+        opacity: 1;
+        -webkit-transform: translate(0, 0);
+            -ms-transform: translate(0, 0);
+                transform: translate(0, 0);
+        margin-top: 14px;
+        z-index: 2; }
+      .news .all_news .accordion ul {
+        list-style: none;
+        -webkit-perspective: 900;
+                perspective: 900;
+        padding: 0;
+        margin: 0; }
+      .news .all_news .accordion ul li {
+        position: relative;
+        padding: 0;
+        margin: 0;
+        padding-bottom: 4px;
+        padding-top: 18px;
+        border-top: 1px dotted #dce7eb; }
+      .news .all_news .accordion ul li input[type=checkbox] {
+        position: absolute;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        opacity: 0; }
+      .news .all_news .accordion ul li input[type=checkbox]:checked ~ p {
+        margin-top: 0;
+        max-height: 0;
+        opacity: 0;
+        -webkit-transform: translate(0, 50%);
+            -ms-transform: translate(0, 50%);
+                transform: translate(0, 50%); }
 
 .brend-icons {
   width: 1160px;
