--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -10,6 +10,10 @@
     content: url("../img/shape_blue.png");
     margin-left: 10px;
   }
+  img {
+    margin-top: 10px;
+    display: block;
+  }
 }
 
 @mixin hover-link {
@@ -82,6 +86,9 @@
         @include hover-link;
       }
     }
+
+
+
     input {
       background: url("../img/search.png") 95% 50% no-repeat, #35383c;
       outline: none;
@@ -105,6 +112,13 @@
     justify-content: space-between;
     font-size: 13px;
     padding: 60px 0;
+    .num {
+      p{
+        color: #e9e9ea;
+        font-size: 90px;
+        margin: 0;
+      }
+    }
     .power {
       width: 23%;
       @include column;
@@ -135,9 +149,9 @@
     img{
       padding-right: 50px;
     }
-    img:hover {
-      //background: rgba($red, $red, $red, $alpha);
-    }
+    /*img:hover {
+      background: rgba(0, 170, 238, 0.9);
+    }*/
     a {
       display: block;
       color: #fff;
@@ -146,6 +160,132 @@
     }
     @include hover-link;
   }
+}
+
+.news {
+  background: #f7f7f7;
+  .all_news{
+    display: flex;
+    @include margin;
+    .latest_news {
+      padding: 40px 0 100px 0;
+      .head_box {
+        display: flex;
+        &::before {
+          content: url("../img/jan.png");
+          margin-right: 20px;
+          margin-top: 15px;
+        }
+        .advanced_machinery {
+          display: flex;
+          flex-direction: column;
+          color: #8a8a8a;
+          width: 35%;
+          h4 {
+            color: #000;
+            margin-bottom: 0;
+          }
+          .under_text {
+            display: flex;
+            span {
+              display: block;
+              margin-right: 5px;
+            }
+            p {
+              color: #0187f4;
+              margin: 0 10px 0 0;
+            }
+          }
+        }
+      }
+      .foot_box {
+        display: flex;
+        &::before {
+          content: url("../img/jan21.png");
+          margin-right: 20px;
+          margin-top: 15px;
+        }
+        .powerful {
+          display: flex;
+          flex-direction: column;
+          color: #8a8a8a;
+          width: 35%;
+          h4 {
+            color: #000;
+            margin-bottom: 0;
+          }
+          .under_text {
+            display: flex;
+            span {
+              display: block;
+              margin-right: 5px;
+            }
+            p {
+              color: #0187f4;
+              margin: 0 10px 0 0;
+            }
+          }
+        }
+      }
+    }
+    .accordion {
+      width: 40%;
+      .transition, p, ul li i:before, ul li i:after {
+        transition: all 0.25s ease-in-out;
+      }
+
+      h5 {
+        color: #ff6873;
+      }
+
+      p {
+        color: rgba(48, 69, 92, 0.8);
+        font-size: 17px;
+        line-height: 26px;
+        letter-spacing: 1px;
+        position: relative;
+        overflow: hidden;
+        max-height: 800px;
+        opacity: 1;
+        transform: translate(0, 0);
+        margin-top: 14px;
+        z-index: 2;
+      }
+
+      ul {
+        list-style: none;
+        perspective: 900;
+        padding: 0;
+        margin: 0;
+      }
+
+      ul li {
+        position: relative;
+        padding: 0;
+        margin: 0;
+        padding-bottom: 4px;
+        padding-top: 18px;
+        border-top: 1px dotted #dce7eb;
+      }
+
+      ul li input[type=checkbox] {
+        position: absolute;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        opacity: 0;
+      }
+
+      ul li input[type=checkbox]:checked ~ p {
+        margin-top: 0;
+        max-height: 0;
+        opacity: 0;
+        transform: translate(0, 50%);
+      }
+    }
+    }
+
 }
 
 .brend-icons {
