--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,48 @@
+/*
+SCSS variables are information about icon's compiled state, stored under its original file name
+
+.icon-home {
+  width: $icon-home-width;
+}
+
+The large array-like variables contain all information about a single icon
+$icon-home: x y offset_x offset_y width height total_width total_height image_path;
+
+At the bottom of this section, we provide information about the spritesheet itself
+$spritesheet: width height image $spritesheet-sprites;
+*/
+/*
+The provided mixins are intended to be used with the array-like variables
+
+.icon-home {
+  @include sprite-width($icon-home);
+}
+
+.icon-email {
+  @include sprite($icon-email);
+}
+
+Example usage in HTML:
+
+`display: block` sprite:
+<div class="icon-home"></div>
+
+To change `display` (e.g. `display: inline-block;`), we suggest using a common CSS class:
+
+// CSS
+.icon {
+  display: inline-block;
+}
+
+// HTML
+<i class="icon icon-home"></i>
+*/
+/*
+The `sprites` mixin generates identical output to the CSS template
+  but can be overridden inside of SCSS
+
+@include sprites($spritesheet-sprites);
+*/
 .wrapper {
   width: 1160px;
   margin: 0 auto; }
@@ -76,9 +121,19 @@
       .wrapper .text-container .power a {
         text-decoration: none;
         color: #000; }
+      .wrapper .text-container .power a:hover {
+        color: #248cec; }
       .wrapper .text-container .power a::after {
-        content: url("../img/shape_blue.png");
-        margin-left: 10px; }
+        background: url("../img/sprites/sprite.png") -10px 0 no-repeat;
+        content: "";
+        width: 10px;
+        height: 11px;
+        overflow: hidden;
+        vertical-align: middle;
+        margin-left: 10px;
+        display: inline-block; }
+      .wrapper .text-container .power a:hover::after {
+        background-position: 0 0; }
       .wrapper .text-container .power img {
         margin-top: 10px;
         display: block; }
@@ -89,9 +144,19 @@
       .wrapper .text-container .techno a {
         text-decoration: none;
         color: #000; }
+      .wrapper .text-container .techno a:hover {
+        color: #248cec; }
       .wrapper .text-container .techno a::after {
-        content: url("../img/shape_blue.png");
-        margin-left: 10px; }
+        background: url("../img/sprites/sprite.png") -10px 0 no-repeat;
+        content: "";
+        width: 10px;
+        height: 11px;
+        overflow: hidden;
+        vertical-align: middle;
+        margin-left: 10px;
+        display: inline-block; }
+      .wrapper .text-container .techno a:hover::after {
+        background-position: 0 0; }
       .wrapper .text-container .techno img {
         margin-top: 10px;
         display: block; }
@@ -102,9 +167,19 @@
       .wrapper .text-container .support a {
         text-decoration: none;
         color: #000; }
+      .wrapper .text-container .support a:hover {
+        color: #248cec; }
       .wrapper .text-container .support a::after {
-        content: url("../img/shape_blue.png");
-        margin-left: 10px; }
+        background: url("../img/sprites/sprite.png") -10px 0 no-repeat;
+        content: "";
+        width: 10px;
+        height: 11px;
+        overflow: hidden;
+        vertical-align: middle;
+        margin-left: 10px;
+        display: inline-block; }
+      .wrapper .text-container .support a:hover::after {
+        background-position: 0 0; }
       .wrapper .text-container .support img {
         margin-top: 10px;
         display: block; }
@@ -171,6 +246,8 @@
           .news .all_news .latest_news .head_box .advanced_machinery h4 {
             color: #000;
             margin-bottom: 0; }
+          .news .all_news .latest_news .head_box .advanced_machinery h4:hover {
+            color: #248cec; }
           .news .all_news .latest_news .head_box .advanced_machinery .under_text {
             display: -webkit-box;
             display: -webkit-flex;
@@ -206,6 +283,8 @@
           .news .all_news .latest_news .foot_box .powerful h4 {
             color: #000;
             margin-bottom: 0; }
+          .news .all_news .latest_news .foot_box .powerful h4:hover {
+            color: #248cec; }
           .news .all_news .latest_news .foot_box .powerful .under_text {
             display: -webkit-box;
             display: -webkit-flex;
