--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,7 +1,9 @@
 @import "../css/sprite";
 @import "../scss/_mixins";
+@import "../scss/_fonts";
 
 .wrapper {
+  font-family: 'Ubuntu Condensed';
 @include margin;
   header {
     display: flex;
