--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -6,8 +6,8 @@
 }
 
 @font-face {
-  font-family: 'Ubuntu Condensed';
+  font-family: 'Ubuntu Medium';
   font-style: normal;
   font-weight: 500;
-  src: local('Ubuntu Condensed'),url(../fonts/Ubuntu.woff2) format('woff2');
+  src: local('Ubuntu'),url(../fonts/Ubuntu.woff2) format('woff2');
 }
