--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,310 +1,13 @@
 @import "../css/sprite";
 @import "../scss/_mixins";
 @import "../scss/_fonts";
+@import "../scss/_wrapper";
+@import "../scss/_container";
+@import "../scss/_news";
+@import "../scss/_brend-icon";
+@import "../scss/_foot-link";
+@import "../scss/_footer";
 
-.wrapper {
-  font-family: 'Ubuntu Condensed';
-@include margin;
-  header {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 0 20px 0;
-  }
-  .icon {
-    .facebook::after {
-      background: url(../img/image1.jpg) 0 0 no-repeat;
-      content: "";
-      width: 20px;
-      height: 20px;
-      overflow: hidden;
-      vertical-align: middle;
-      display: inline-block;
-    }
-    .facebook:hover::after {
-      background: url(../img/image1.jpg) 0 -25px no-repeat;
-    }
-    .twitter::after{
-      background: url(../img/image1.jpg) -25px 0 no-repeat;
-      @include socisl-link;
-    }
-    .twitter:hover::after {
-      background: url(../img/image1.jpg) -25px -25px no-repeat;
-    }
-    .rss::after{
-      background: url(../img/image1.jpg) -50px 0 no-repeat;
-      @include socisl-link;
-    }
-    .rss:hover::after {
-      background: url(../img/image1.jpg) -50px -25px no-repeat;
-    }
-    .linkedin::after{
-      background: url(../img/image1.jpg) -75px 0 no-repeat;
-      @include socisl-link;
-    }
-    .linkedin:hover::after {
-      background: url(../img/image1.jpg) -75px -25px no-repeat;
-    }
-    .skype::after{
-      background: url(../img/image1.jpg) -100px 0 no-repeat;
-      @include socisl-link;
-    }
-    .skype:hover::after {
-      background: url(../img/image1.jpg) -100px -25px no-repeat;
-    }
-  }
-
-  nav {
-    display: flex;
-    justify-content: space-between;
-    background: #2a2d32;
-    ul {
-      display: flex;
-      padding: 0;
-      margin: 0;
-      .blue{
-        background: #248cec;
-      }
-      li {
-        list-style: none;
-        padding: 17px 25px;
-        border-right: 1px solid #000;
-        a {
-          font-size: 15px;
-          color: #fff;
-          text-decoration: none;
-        }
-        @include hover-link;
-      }
-    }
-
-    input {
-      background: url("../img/search.png") 95% 50% no-repeat, #35383c;
-      outline: none;
-      border: 1px solid #000;
-      height: 35px;
-      margin: 7px;
-      padding: 0 0 0 10px;
-    }
-    input::-webkit-input-placeholder {
-      padding-left: 0;
-      color: #5d5f61;
-    }
-  }
-
-  .fotorama {
-    margin-top: 30px;
-  }
-
-  .text-container{
-    display: flex;
-    justify-content: space-between;
-    font-size: 13px;
-    padding: 60px 0;
-    .num {
-      p{
-        color: #e9e9ea;
-        font-size: 90px;
-        margin: 0;
-      }
-    }
-    .power {
-      width: 23%;
-      @include column;
-    }
-    .techno {
-      width: 23%;
-      @include column;
-    }
-    .support {
-      width: 23%;
-      @include column;
-    }
-  }
-}
-
-.container {
-  background: #2a2d32;
-  padding: 50px 0;
-  h3{
-    color: #fff;
-    padding-bottom: 30px;
-  }
-
-  .our_services{
-    @include margin;
-    .all_services {
-      display: flex;
-    }
-
-    a:hover::before {
-      //background: rgba(36, 140, 236,.3);
-      background-color:#2c4070;
-      opacity:0.2;
-    }
-    .schedule_srvices {
-      .schedule_pic::before{
-        background: url(../img/Untitled-10.png) no-repeat;
-        @include service-pic;
-      }
-    }
-    .preventiv_maintence {
-      .preventiv_pic::before{
-        background: url(../img/rdJD.png) no-repeat;
-        @include service-pic;
-      }
-    }
-
-    .wheel_srvices {
-      .wheel_pic::before{
-        background: url(../img/Rectangle.png) no-repeat;
-        @include service-pic;
-      }
-    }
-    .repair_services {
-      .repair_pic::before {
-        background: url(../img/Selective.png) no-repeat;
-        @include service-pic;
-      }
-    }
-
-    a {
-      display: block;
-      color: #fff;
-      text-decoration: none;
-      padding-top: 30px;
-    }
-    @include hover-link;
-  }
-}
-
-.news {
-  background: #f7f7f7;
-  .all_news{
-    display: flex;
-    @include margin;
-    .latest_news {
-      padding: 40px 0 100px 0;
-      .head_box {
-        display: flex;
-        &::before {
-          content: url("../img/jan.png");
-          margin-right: 20px;
-          margin-top: 15px;
-        }
-        .advanced_machinery {
-          display: flex;
-          flex-direction: column;
-          color: #8a8a8a;
-          width: 35%;
-          h4 {
-            color: #000;
-            margin-bottom: 0;
-          }
-          h4:hover {
-            color: #248cec;
-          }
-          .under_text {
-            display: flex;
-            span {
-              display: block;
-              margin-right: 5px;
-            }
-            p {
-              color: #0187f4;
-              margin: 0 10px 0 0;
-            }
-          }
-        }
-      }
-      .foot_box {
-        display: flex;
-        &::before {
-          content: url("../img/jan21.png");
-          margin-right: 20px;
-          margin-top: 15px;
-        }
-        .powerful {
-          display: flex;
-          flex-direction: column;
-          color: #8a8a8a;
-          width: 35%;
-          h4 {
-            color: #000;
-            margin-bottom: 0;
-          }
-          h4:hover {
-            color: #248cec;
-          }
-          .under_text {
-            display: flex;
-            span {
-              display: block;
-              margin-right: 5px;
-            }
-            p {
-              color: #0187f4;
-              margin: 0 10px 0 0;
-            }
-          }
-        }
-      }
-    }
-    .accordion {
-      width: 40%;
-      h5 {
-        border: 1px solid #000;
-      }
-    }
-  }
-
-}
-
-.brend-icons {
-  @include margin;
-}
-
-.foot_link{
-  background: #2a2d32;
-  .link_box{
-    display: flex;
-    justify-content: space-between;
-    padding: 40px 0;
-    @include margin;
-    div {
-      width: 20%;
-      @include foot-link;
-      .last_link {
-        border: none;
-      }
-    }
-  }
-}
-
-footer {
-  background: #3c3e40;
-  color: #5d5f61;
-  .footer_container{
-    @include margin;
-    display: flex;
-    justify-content: space-between;
-    .contact_inform {
-      display: flex;
-      p {
-        display: block;
-        margin-right: 20px;
-      }
-      .locate:before {
-        content: url("../img/location.png");
-        margin-right: 10px;
-      }
-      .phone:before {
-        content: url("../img/iphone.png");
-        margin-right: 10px;
-      }
-      .mail:before {
-        content: url("../img/email.png");
-        margin-right: 10px;
-      }
-    }
-  }
+body {
+  font-family: 'Ubuntu Medium';
 }
