--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -2,12 +2,17 @@
   font-family: 'Ubuntu Condensed';
   font-style: normal;
   font-weight: 400;
-  src: local('Ubuntu Condensed'), url(../fonts/Ubuntu-Condensed.woff2) format('woff2');
+  src: url(../fonts/Ubuntu-Condensed.woff2) format('woff2');
 }
 
 @font-face {
   font-family: 'Ubuntu Medium';
   font-style: normal;
   font-weight: 500;
-  src: local('Ubuntu'),url(../fonts/Ubuntu.woff2) format('woff2');
+  src: url(../fonts/Ubuntu.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Aileron-Regular';
+  src: url(../fonts/Aileron-Regular.otf) format('otf');
 }
