--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -7,7 +7,5 @@
 @import "../scss/_brend-icon";
 @import "../scss/_foot-link";
 @import "../scss/_footer";
-
-body {
-  font-family: 'Ubuntu Medium';
-}
+@import "../scss/_body";
+@import "../scss/_variable";
