--- a/app/scss/_container.scss
+++ b/app/scss/_container.scss
@@ -1,6 +1,7 @@
 @import "../css/sprite";
 @import "../scss/_mixins";
 @import "../scss/_fonts";
+@import "../scss/_variable";
 
 .container {
   background: #2a2d32;
