--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,8 +1,10 @@
 @import "../css/sprite";
 @import "../scss/_mixins";
 @import "../scss/_fonts";
+@import "../scss/_variable";
 
 footer {
+  font-family: $font-link;
   background: #3c3e40;
   color: #5d5f61;
   .footer_container{
