--- a/app/scss/_foot-link.scss
+++ b/app/scss/_foot-link.scss
@@ -1,5 +1,5 @@
 
-@import "../css/sprite";
+@import "../scss/_sprite";
 @import "../scss/_mixins";
 @import "../scss/_fonts";
 @import "../scss/_variable";
