--- a/app/scss/_news.scss
+++ b/app/scss/_news.scss
@@ -1,4 +1,4 @@
-@import "../css/sprite";
+@import "../scss/_sprite";
 @import "../scss/_mixins";
 @import "../scss/_fonts";
 @import "../scss/_variable";
@@ -85,9 +85,17 @@
       }
     }
     .accordion {
-      width: 40%;
-      h5 {
-        border: 1px solid #000;
+      width: 600px;
+      .active {
+        h5 {
+          display: block;
+          border: 1px solid #000;
+          margin: 10px 30px;
+        }
+        h5::before {
+          content: url("../img/plus.png");
+          border-right: 1px solid;
+        }
       }
     }
   }
