--- a/app/scss/_sprite.scss
+++ b/app/scss/_sprite.scss
@@ -11,6 +11,28 @@ $icon-home: x y offset_x offset_y width height total_width total_height image_pa
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet: width height image $spritesheet-sprites;
 */
+$minus-name: 'minus';
+$minus-x: 9px;
+$minus-y: 9px;
+$minus-offset-x: -9px;
+$minus-offset-y: -9px;
+$minus-width: 9px;
+$minus-height: 1px;
+$minus-total-width: 20px;
+$minus-total-height: 18px;
+$minus-image: 'sprite.png';
+$minus: (9px, 9px, -9px, -9px, 9px, 1px, 20px, 18px, 'sprite.png', 'minus', );
+$plus-name: 'plus';
+$plus-x: 0px;
+$plus-y: 9px;
+$plus-offset-x: 0px;
+$plus-offset-y: -9px;
+$plus-width: 9px;
+$plus-height: 9px;
+$plus-total-width: 20px;
+$plus-total-height: 18px;
+$plus-image: 'sprite.png';
+$plus: (0px, 9px, 0px, -9px, 9px, 9px, 20px, 18px, 'sprite.png', 'plus', );
 $shape-name: 'shape';
 $shape-x: 0px;
 $shape-y: 0px;
@@ -19,9 +41,9 @@ $shape-offset-y: 0px;
 $shape-width: 10px;
 $shape-height: 9px;
 $shape-total-width: 20px;
-$shape-total-height: 9px;
+$shape-total-height: 18px;
 $shape-image: 'sprite.png';
-$shape: (0px, 0px, 0px, 0px, 10px, 9px, 20px, 9px, 'sprite.png', 'shape', );
+$shape: (0px, 0px, 0px, 0px, 10px, 9px, 20px, 18px, 'sprite.png', 'shape', );
 $shape-blue-name: 'shape_blue';
 $shape-blue-x: 10px;
 $shape-blue-y: 0px;
@@ -30,14 +52,14 @@ $shape-blue-offset-y: 0px;
 $shape-blue-width: 10px;
 $shape-blue-height: 9px;
 $shape-blue-total-width: 20px;
-$shape-blue-total-height: 9px;
+$shape-blue-total-height: 18px;
 $shape-blue-image: 'sprite.png';
-$shape-blue: (10px, 0px, -10px, 0px, 10px, 9px, 20px, 9px, 'sprite.png', 'shape_blue', );
+$shape-blue: (10px, 0px, -10px, 0px, 10px, 9px, 20px, 18px, 'sprite.png', 'shape_blue', );
 $spritesheet-width: 20px;
-$spritesheet-height: 9px;
+$spritesheet-height: 18px;
 $spritesheet-image: 'sprite.png';
-$spritesheet-sprites: ($shape, $shape-blue, );
-$spritesheet: (20px, 9px, 'sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($minus, $plus, $shape, $shape-blue, );
+$spritesheet: (20px, 18px, 'sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
