--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,4 +1,4 @@
-@import "../css/sprite";
+@import "../scss/_sprite";
 @import "../scss/_mixins";
 @import "../scss/_fonts";
 @import "../scss/_wrapper";
