--- a/app/scss/_news.scss
+++ b/app/scss/_news.scss
@@ -7,9 +7,10 @@
   background: #f7f7f7;
   .all_news{
     display: flex;
+    padding: 40px 0 100px 0;
     @include margin;
     .latest_news {
-      padding: 40px 0 100px 0;
+      width: 65%;
       .head_box {
         display: flex;
         &::before {
@@ -21,7 +22,7 @@
           display: flex;
           flex-direction: column;
           color: #8a8a8a;
-          width: 35%;
+          width: 47%;
           h4 {
             color: #000;
             margin-bottom: 0;
@@ -58,7 +59,7 @@
           display: flex;
           flex-direction: column;
           color: #8a8a8a;
-          width: 35%;
+          width: 47%;
           h4 {
             color: #000;
             margin-bottom: 0;
@@ -89,11 +90,15 @@
       .active {
         h5 {
           display: block;
+          padding: 10px;
           border: 1px solid #000;
-          margin: 10px 30px;
         }
         h5::before {
           content: url("../img/plus.png");
+          border-right: 1px solid;
+        }
+        .active::before {
+          content: url("../img/minus.png");
           border-right: 1px solid;
         }
       }
